manifests/ingress/carts-dev-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: carts-ingress
 namespace: production
spec:
 rules:
   - host: carts.prod.18.130.200.62.xip.io
     http:
       paths:
         - path: /
           backend:
             serviceName: carts
             servicePort: 80
