manifests/ingress/carts-prod-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: carts-ingress
 namespace: dev
spec:
 rules:
   - host: carts.dev.18.130.200.62.xip.io
     http:
       paths:
         - path: /
           backend:
             serviceName: carts
             servicePort: 80
