manifests/ingress/k8api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: kubernetes-ingress
 namespace: default
 annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts: 
    - k8api.18.130.200.62.xip.io
  rules:
   - host: k8api.18.130.200.62.xip.io
     http:
       paths:
         - path: /
           backend:
             serviceName: kubernetes
             servicePort: 443
